facility schema change
